--- a/index.html
+++ b/index.html
@@ -7,26 +7,22 @@
 
     <body>
         <div id="wrapper">
-            <div class="block"><img src="https://dummyimage.com/600x400/000/fff"></div>
-            <div class="block"><img src="https://dummyimage.com/800x200/020/fff"></div>
-            <div class="block"><img src="https://dummyimage.com/200x500/300/fff"></div>
-            <div class="block"><img src="https://dummyimage.com/700x100/010/faf"></div>
-            <div class="block"><img src="https://dummyimage.com/300x450/010/fff"></div>
-            <div class="block"><img src="https://dummyimage.com/600x400/000/fff"></div>
-            <div class="block"><img src="https://dummyimage.com/800x200/020/fff"></div>
-            <div class="block"><img src="https://dummyimage.com/200x500/300/fff"></div>
-            <div class="block"><img src="https://dummyimage.com/700x100/010/faf"></div>
-            <div class="block"><img src="https://dummyimage.com/350x250/010/fff"></div>
-            <div class="block"><img src="https://dummyimage.com/700x300/000/fff"></div>
-            <div class="block"><img src="https://dummyimage.com/600x250/020/fff"></div>
-            <div class="block"><img src="https://dummyimage.com/280x550/300/fff"></div>
-            <div class="block"><img src="https://dummyimage.com/700x100/010/faf"></div>
-            <div class="block"><img src="https://dummyimage.com/300x450/010/fff"></div>
-            <div class="block"><img src="https://dummyimage.com/620x400/000/fff"></div>
-            <div class="block"><img src="https://dummyimage.com/800x200/020/fff"></div>
-            <div class="block"><img src="https://dummyimage.com/200x550/300/fff"></div>
-            <div class="block"><img src="https://dummyimage.com/700x100/010/faf"></div>
-            <div class="block"><img src="https://dummyimage.com/300x450/010/fff"></div>
+            <div class="block"><img src="http://placekitten.com/300/352"></div>
+            <div class="block"><img src="http://placekitten.com/500/252"></div>
+            <div class="block"><img src="http://placekitten.com/500/352"></div>
+            <div class="block"><img src="http://placekitten.com/420/652"></div>
+            <div class="block"><img src="http://placekitten.com/800/852"></div>
+            <div class="block"><img src="http://placekitten.com/400/152"></div>
+            <div class="block"><img src="http://placekitten.com/705/252"></div>
+            <div class="block"><img src="http://placekitten.com/900/80"></div>
+            <div class="block"><img src="http://placekitten.com/500/552"></div>
+            <div class="block"><img src="http://placekitten.com/540/452"></div>
+            <div class="block"><img src="http://placekitten.com/200/552"></div>
+            <div class="block"><img src="http://placekitten.com/120/452"></div>
+            <div class="block"><img src="http://placekitten.com/100/452"></div>
+            <div class="block"><img src="http://placekitten.com/100/132"></div>
+            <div class="block"><img src="http://placekitten.com/805/251"></div>
+            <div class="block"><img src="http://placekitten.com/910/100"></div>
         </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="GridMaker.js"></script>
